<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black_fone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">


        <FrameLayout
            android:id="@+id/view_container_search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="15"
            android:layout_marginTop="10dp">
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/filter1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:background="@drawable/filter_bg"
                        android:layout_marginRight= "15dp">

                        <ImageView
                            android:id="@+id/imageView9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/icon_plus"
                            android:layout_gravity="center"
                            android:layout_marginLeft="8dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/filter1"
                            android:textColor="@color/white"
                            android:layout_margin="10dp"
                            android:textSize="14dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/filter2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:background="@drawable/filter_bg"
                        android:layout_marginRight= "15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/filter2"
                            android:textColor="@color/white"
                            android:layout_margin="10dp"
                            android:textSize="14dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/filter3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:background="@drawable/filter_bg"
                        android:layout_marginRight= "15dp">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/icon_person"
                            android:layout_gravity="center"
                            android:layout_marginLeft="8dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/filter3"
                            android:textColor="@color/white"
                            android:layout_margin="10dp"
                            android:textSize="14dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/filter4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:background="@drawable/filter_bg"
                        android:layout_marginRight= "15dp">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/icon_filter"
                            android:layout_gravity="center"
                            android:layout_marginLeft="8dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/filter4"
                            android:textColor="@color/white"
                            android:layout_margin="10dp"
                            android:textSize="14dp"/>
                     </LinearLayout>
                </LinearLayout>
            </HorizontalScrollView>

        </FrameLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="40"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/direct_flights">
            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/direct_flights"
                android:textColor="@color/white"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:textSize="20dp"/>
        <LinearLayout
            android:id="@+id/avia"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_see_more"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="16dp"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:orientation="horizontal"
            android:background="@drawable/switch1"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/icon_bell_blue"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"/>
            <Switch
                android:id="@+id/switch2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:text="@string/button_switch"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textSize="16dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/container_menu_bottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="12">

        </FrameLayout>
    </LinearLayout>



</RelativeLayout>